--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,39 @@
 }
 
 .list-group {
-    display : none
+    height: 0px;
+    overflow: hidden;
+    transition: all 0.5s;
 }
 
-.show {
-    display : block
+.slide {
+    height: 210px;
+    overflow: auto;
+}
+
+.black-bg {
+    width : 100%;
+    height : 100%;
+    position : fixed;
+    background : rgba(0,0,0,0.5);
+    z-index : 5;
+    padding: 30px;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.4s;
+}
+.white-bg {
+    background: white;
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.show-modal {
+    visibility: visible;
+    opacity: 1;
+}
+
+.main-bg {
+    padding: 100px 20px;
+    background: lightgray;
 }
