--- a/css/main.css
+++ b/css/main.css
@@ -52,3 +52,17 @@
 .hide {
     display: none;
 }
+
+.slide-container {
+    width: 300vw;
+    transition: all 1s;
+    transform: translateX(0vw);
+}
+
+.slide-box {
+    width: 100vw;
+    float: left;
+}
+.slide-box img {
+    width: 100%;
+}
