--- a/css/main.css
+++ b/css/main.css
@@ -90,3 +90,21 @@ body {
 .form-hide {
     display: none;
 }
+
+.card-bg {
+    height: 3000px;
+    margin-top : 800px;
+    margin-bottom: 1600px;
+}
+
+.card-box {
+    position: sticky;
+    top: 80px;
+    margin-top: 200px;
+}
+
+.card-box img{
+    display: block;
+    margin: auto;
+    max-width: 80%;
+}
